updated footer and header; polished-up css

--- a/view/about-project.html
+++ b/view/about-project.html
@@ -24,7 +24,7 @@
         <div class="header_components">
           <!-- Logo -->
           <div class="logo">
-            <a href="../index.html"
+            <a href="index.html"
               ><img src="../assets/index.html/logo.svg" alt="logo"
             /></a>
           </div>
@@ -33,8 +33,10 @@
           <div class="navigation">
             <nav>
               <ul>
-                <li><a href="#">წიგნები</a></li>
-                <li><a href="#">პროექტის შესახებ</a></li>
+                <li>
+                  <a href="./index.html">მთავარი</a>
+                </li>
+                <li><a href="#" class="active-header">პროექტის შესახებ</a></li>
               </ul>
             </nav>
           </div>
