--- a/styles/page/_about-project.scss
+++ b/styles/page/_about-project.scss
@@ -1,14 +1,12 @@
 $header-blue: #0468dc;
 $text-color: #333333;
 
-.main-content-wrapper {
-  margin-top: 64px;
-}
-
 .about-main {
+  font-family: FiraGo400;
+
   .landing-photo-wrapper::before {
     display: none;
-  } //np need for overlay anymore
+  }
 
   section {
     margin-bottom: 40px;
@@ -49,10 +47,12 @@ $text-color: #333333;
 
         li {
           @include flex();
-          gap: 16px;
+          gap: 20px;
 
           a {
             @include text_font_style($text-color, inherit, 22px, 500);
+            font-family: Firago500;
+            line-height: 26px;
           }
         }
 
@@ -64,10 +64,10 @@ $text-color: #333333;
 
       .iframe-div {
         display: flex;
-      } // stretching to 100%
+      }
 
       iframe {
-        flex: 1; // stretching to 100%
+        flex: 1;
         width: 100%;
         height: 288px;
 
