--- a/styles/utils/_variables.scss
+++ b/styles/utils/_variables.scss
@@ -7,7 +7,7 @@ $nav-element-color: #ffffff60;
 $nav-element-color-active: #ffffff;
 $dark-blue-color: #022859;
 $body-background-color: #f5f5f5;
-$link-color: #0468dc;
+$main-blue-color: #0468dc;
 $card-title: #333333;
 
 // resolution
