--- a/styles/components/_components.scss
+++ b/styles/components/_components.scss
@@ -22,142 +22,225 @@ body{
     width: 91.67%;
   }
 
-  .filter-books-wrapper {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    .filter-books-wrapper {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
 
-    .filter-section {
-      width: 360px;
-      margin-right: 10px;
+      .filter-section {
+        max-width: 402px;
+        
 
-      .filter-clear-button {
-        width: 100%;
-        height: 58px;
-        border: 1px solid $dark-blue-color;
-        border-radius: 10px;
-        background-color: white;
-        font-size: 18px;
-        font-weight: 600;
-        line-height: 21.6px;
-        color: $dark-blue-color;
-      }
+        .buttons-section{
+          display: flex;
+          flex-direction: column;
+          gap: 25px;
 
-      .dropdown-section {
-        margin-top: 32px;
+          .search-container{
+            position: relative;
+  
+            .search-icon{
+              position: absolute;
+              padding: 0 12px 0 20px;
+              top: 50%;
+              transform: translateY(-50%);
+            }
+    
+            input[type="text"]{
+              width: 100%;
+              height: 56px;
+              border-radius: 10px;
+              border: 1px solid #333333;
+              padding: 0 50px;
+              font-family: FiraGo400;
+              font-size: 20px;
+              color: 333333;
+            }
+    
+            input[type="text"]::placeholder{
+              color: #3C3C4399;
+              font-family: FiraGO400;
+              font-size: 20px;
+            }
+          }
 
-        .dropdown-section-wrapper {
-          .dropdown-head {
+          .blue-button{
+            @include searchReadButton;
+          }
+
+          .dropdown-button{
+            width: 100%;
+            height: 59px;
+            border: 2px solid $main-blue-color;
+            border-radius: 15px;
+            background-color: #ffffff;
             display: flex;
-            flex-direction: row;
             align-items: center;
-            justify-content: space-between;
-            font-size: 24px;
-            font-weight: 200px;
-            line-height: 28.8px;
-            cursor: pointer;
+            justify-content: center;
+            gap: 10px;
 
-            img {
-              cursor: pointer;
-
-              &.rotate {
-                transform: rotate(180deg);
-              }
+  
+            .dropdown-text{
+              color: $main-blue-color;
+              font-size: 24px;
+              font-family: FiraGo400;
             }
+
+          }
+        }
+
+        .clean-filters{
+          cursor: pointer;
+          display: flex;
+          justify-content: flex-end;
+          gap: 10px;
+          margin: 11px 0 19px;
+
+          .clean-filters-text{
+            color: #3C3C4399;
+            font-family: FiraGo600;
+            font-size: 1rem;
+          }
+        }
+
+        .dropdownUnderline{
+          @include dropdownUnderline;
+        }
+
+
+
+      .media-type-section{
+        display: flex;
+        flex-direction: column;
+        gap: 36px;
+      
+        .dropdown-section-wrapper {
+          display: flex;
+          flex-direction: column;
+          gap: 15px;
+
+          h2{
+            @include dropdownTitles;
           }
 
-          .dropdown-container {
-            height: 0;
-            overflow: hidden;
-            transition: height 0.3s ease-in-out;
+          .dropdown{
+            display: flex;
+            flex-direction: column;
 
-            .dropdown {
+            
+            label {
               display: flex;
-              flex-direction: column;
+              flex-direction: row;
+              align-items: center;
+              justify-content: space-between;
+              cursor: pointer;
+              font-size: 16px;
+              font-family: FiraGo400;
+              color: #333333;
+              position: relative;
 
-              .dropdown-line {
-                width: 100%;
-                height: 1px;
-                border: 1px solid #d5d5d5;
-                border-radius: 5px;
-                color: #d5d5d5;
-                margin: 18px 0;
+              &:not(:last-child) {
+                margin-bottom: 15px;
               }
 
-              label {
-                display: flex;
-                flex-direction: row;
-                align-items: center;
-                justify-content: space-between;
+              input[type="checkbox"] {
+                appearance: none;
+                -webkit-appearance: none;
+                width: 22px;
+                height: 22px;
                 cursor: pointer;
-                font-size: 20px;
-                font-weight: 400;
-                line-height: 24px;
+                border: 2px solid #3C3C4360;
+                border-radius: 3px;
                 position: relative;
+                display: inline-block;
+                vertical-align: middle;
 
-                &:not(:last-child) {
-                  margin-bottom: 20px;
+                &::before {
+                  content: "";
+                  display: block;
+                  width: 100%;
+                  height: 100%;
                 }
 
-                input[type="checkbox"] {
-                  appearance: none;
-                  -webkit-appearance: none;
-                  width: 22px;
-                  height: 22px;
-                  cursor: pointer;
-                  border: 2px solid #515151;
-                  border-radius: 3px;
-                  position: relative;
-                  display: inline-block;
-                  vertical-align: middle;
+                &:checked::before {
+                  background-color: #0077ff;
+                }
 
-                  &::before {
-                    content: "";
-                    display: block;
-                    width: 100%;
-                    height: 100%;
-                  }
+                &:checked {
+                  background-color: #0077ff;
+                  border: 2px solid #0077ff;
+                }
 
-                  &:checked::before {
-                    background-color: #022859;
-                  }
-
-                  &:checked {
-                    background-color: #022859;
-                    border: 2px solid #022859;
-                  }
-
-                  &:checked::after {
-                    content: "";
-                    position: absolute;
-                    top: 50%;
-                    left: 50%;
-                    width: 8px;
-                    height: 14px;
-                    border: solid #ffffff;
-                    border-width: 0 2.5px 2.5px 0;
-                    transform: translate(-40%, -60%) rotate(45deg);
-                  }
+                &:checked::after {
+                  content: "";
+                  position: absolute;
+                  top: 50%;
+                  left: 50%;
+                  width: 8px;
+                  height: 14px;
+                  border: solid #ffffff;
+                  border-width: 0 2.5px 2.5px 0;
+                  transform: translate(-40%, -60%) rotate(45deg);
                 }
               }
-            }
-
-            &.active {
-              height: 184px;
             }
           }
+          
+          // .dropdown-head {
+          //   display: flex;
+          //   flex-direction: row;
+          //   align-items: center;
+          //   justify-content: space-between;
+          //   font-size: 24px;
+          //   font-weight: 200px;
+          //   line-height: 28.8px;
+          //   cursor: pointer;
+
+          //   img {
+          //     cursor: pointer;
+
+          //     &.rotate {
+          //       transform: rotate(180deg);
+          //     }
+          //   }
+          // }
+
+          // .dropdown-container {
+          //   // height: 0;
+          //   // overflow: hidden;
+          //   // transition: height 0.3s ease-in-out;
+
+          //   .dropdown {
+          //     // display: flex;
+          //     // flex-direction: column;
+
+          //     // .dropdown-line {
+          //     //   width: 100%;
+          //     //   height: 1px;
+          //     //   border: 1px solid #d5d5d5;
+          //     //   border-radius: 5px;
+          //     //   color: #d5d5d5;
+          //     //   margin: 18px 0;
+          //     // }
+
+          //   }
+
+          //   &.active {
+          //     height: 184px;
+          //   }
+          // }
 
           .publish-date {
-            height: 115px;
+            // height: 115px;
 
-            .dropdown-line {
-              width: 100%;
-              height: 1px;
-              border: 1px solid #d5d5d5;
-              border-radius: 5px;
-              color: #d5d5d5;
-              margin: 25px 0;
-            }
+            // .dropdown-line {
+            //   width: 100%;
+            //   height: 1px;
+            //   border: 1px solid #d5d5d5;
+            //   border-radius: 5px;
+            //   color: #d5d5d5;
+            //   margin: 25px 0;
+            // }
 
             .date-wrapper {
               display: flex;
@@ -167,21 +250,14 @@ body{
 
               img {
                 rotate: 270deg;
-              }
-
-              // input {
-              //   width: 145px;
-              //   height: 54px;
-              //   border: 1px solid black;
-              //   border-radius: 15px;
-              // }
+              } 
 
               .date-input-container {
                 display: flex;
                 align-items: center;
                 position: relative;
-                border: 1px solid #000;
-                border-radius: 15px;
+                border: 1px solid #3C3C4399;
+                border-radius: 8px;
                 width: 145px;
                 height: 54px;
                 padding: 17px 16px;
@@ -193,16 +269,15 @@ body{
                   align-items: center;
                   justify-content: center;
 
-                  .icon {
+                  .calendar-icon {
                     margin-right: 10px;
                     rotate: 0deg;
                   }
 
                   p {
-                    font-size: 14px;
-                    font-weight: 400;
-                    line-height: 19.2px;
-                    color: #7d7d7d;
+                    font-size: 16px;
+                    font-family: FiraGo400;
+                    color: #3C3C4399;
                   }
 
                   input[type="date"] {
@@ -215,7 +290,7 @@ body{
                     left: 0;
                     opacity: 0;
                     z-index: 10;
-                    // width: 10px;
+                    width: 10px;
                     cursor: pointer;
 
                     &::-webkit-inner-spin-button,
@@ -231,10 +306,6 @@ body{
                 }
               }
             }
-          }
-
-          &:not(:last-child) {
-            margin-bottom: 30px;
           }
         }
       }
