--- a/styles/components/_error.scss
+++ b/styles/components/_error.scss
@@ -20,7 +20,7 @@ body {
     }
 
     p {
-      color: $link-color;
+      color: $main-blue-color;
       font-family: FiraGo700;
       font-size: 1.5rem;
       text-decoration-line: underline;
