--- a/styles/utils/_mixins.scss
+++ b/styles/utils/_mixins.scss
@@ -54,7 +54,7 @@
   // $hover-bg-color: black,
   $active-color: #112f91
 ) {
-  background-color: $bg-color;
+  background-color: red;
   color: $color;
   padding: $padding;
   border: $border;
@@ -77,4 +77,37 @@
     color: $active-color;
     border-bottom: $active-color solid 3px;
   }
+}
+
+//search and readPDF blue buttons
+
+@mixin searchReadButton(
+  $bg-color: $main-blue-color,
+  $color: #FFFFFF,
+  $border-radius: 12px,
+  $border: none,
+  $font: 'FiraGo400',
+  $font-size: 1.5rem,
+) {
+  width: 100%;
+  height: 61px;
+  background-color: $bg-color;
+  color: $color;
+  font-family: $font;
+  font-size: $font-size;
+  border: $border;
+  border-radius: $border-radius;
+}
+
+@mixin dropdownUnderline{
+  width: 100%;
+  height: 2px;
+  background-color: #D8EBFC;
+  border-radius: 2px;
+}
+
+@mixin dropdownTitles{
+  color: #333333;
+  font-size: 24px;
+  font-family: FiraGo700;
 }
