added links to logos
added links to unilab an iliauni logos in footer

--- a/view/about-project.html
+++ b/view/about-project.html
@@ -232,8 +232,12 @@
           </div>
           <div class="unilab-team-container">
             <div class="logo-container">
-              <img src="../assets/iliauni-logo.svg" alt="iliauni-logo" />
-              <img src="../assets/unilab-logo.svg" alt="unilab-logo" />
+              <a href="https://iliauni.edu.ge/ge">
+                <img src="../assets/iliauni-logo.svg" alt="iliauni-logo"
+              /></a>
+              <a href="https://unilab.iliauni.edu.ge/">
+                <img src="../assets/unilab-logo.svg" alt="unilab-logo"
+              /></a>
             </div>
             <p>ვებსაიტზე იმუშავა უნილაბის გუნდმა</p>
           </div>
