--- a/styles/components/_components.scss
+++ b/styles/components/_components.scss
@@ -1,4 +1,4 @@
-body{
+body {
   background-color: $body-background-color;
 }
 
@@ -22,112 +22,106 @@ body{
     width: 91.67%;
   }
 
-    .filter-books-wrapper {
-      display: flex;
-      flex-direction: row;
-      justify-content: space-between;
+  .filter-books-wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 
-      .filter-section {
-        max-width: 402px;
-        
+    .filter-section {
+      max-width: 402px;
 
-        .buttons-section{
-          display: flex;
-          flex-direction: column;
-          gap: 25px;
+      .buttons-section {
+        display: flex;
+        flex-direction: column;
+        gap: 25px;
 
-          .search-container{
-            position: relative;
-  
-            .search-icon{
-              position: absolute;
-              padding: 0 12px 0 20px;
-              top: 50%;
-              transform: translateY(-50%);
-            }
-    
-            input[type="text"]{
-              width: 100%;
-              height: 56px;
-              border-radius: 10px;
-              border: 1px solid #333333;
-              padding: 0 50px;
-              font-family: FiraGo400;
-              font-size: 20px;
-              color: 333333;
-            }
-    
-            input[type="text"]::placeholder{
-              color: #3C3C4399;
-              font-family: FiraGO400;
-              font-size: 20px;
-            }
+        .search-container {
+          position: relative;
+
+          .search-icon {
+            position: absolute;
+            padding: 0 12px 0 20px;
+            top: 50%;
+            transform: translateY(-50%);
           }
 
-          .blue-button{
-            @include searchReadButton;
-          }
-
-          .dropdown-button{
+          input[type="text"] {
             width: 100%;
-            height: 59px;
-            border: 2px solid $main-blue-color;
-            border-radius: 15px;
-            background-color: #ffffff;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 10px;
+            height: 56px;
+            border-radius: 10px;
+            border: 1px solid #333333;
+            padding: 0 50px;
+            font-family: FiraGo400;
+            font-size: 20px;
+            color: 333333;
+          }
 
-  
-            .dropdown-text{
-              color: $main-blue-color;
-              font-size: 24px;
-              font-family: FiraGo400;
-            }
-
+          input[type="text"]::placeholder {
+            color: #3c3c4399;
+            font-family: FiraGO400;
+            font-size: 20px;
           }
         }
 
-        .clean-filters{
-          cursor: pointer;
+        .blue-button {
+          @include searchReadButton;
+        }
+
+        .dropdown-button {
+          width: 100%;
+          height: 59px;
+          border: 2px solid $main-blue-color;
+          border-radius: 15px;
+          background-color: #ffffff;
           display: flex;
-          justify-content: flex-end;
+          align-items: center;
+          justify-content: center;
           gap: 10px;
-          margin: 11px 0 19px;
 
-          .clean-filters-text{
-            color: #3C3C4399;
-            font-family: FiraGo600;
-            font-size: 1rem;
+          .dropdown-text {
+            color: $main-blue-color;
+            font-size: 24px;
+            font-family: FiraGo400;
           }
         }
+      }
 
-        .dropdownUnderline{
-          @include dropdownUnderline;
+      .clean-filters {
+        cursor: pointer;
+        display: flex;
+        justify-content: flex-end;
+        gap: 10px;
+        margin: 11px 0 19px;
+
+        .clean-filters-text {
+          color: #3c3c4399;
+          font-family: FiraGo600;
+          font-size: 1rem;
         }
+      }
 
+      .dropdownUnderline {
+        @include dropdownUnderline;
+      }
 
-
-      .media-type-section{
+      .media-type-section {
         display: flex;
         flex-direction: column;
         gap: 36px;
-      
+
         .dropdown-section-wrapper {
           display: flex;
           flex-direction: column;
           gap: 15px;
 
-          h2{
+          h2 {
             @include dropdownTitles;
           }
 
-          .dropdown{
+          .dropdown {
             display: flex;
             flex-direction: column;
 
-            
             label {
               display: flex;
               flex-direction: row;
@@ -149,7 +143,7 @@ body{
                 width: 22px;
                 height: 22px;
                 cursor: pointer;
-                border: 2px solid #3C3C4360;
+                border: 2px solid #3c3c4360;
                 border-radius: 3px;
                 position: relative;
                 display: inline-block;
@@ -185,7 +179,7 @@ body{
               }
             }
           }
-          
+
           // .dropdown-head {
           //   display: flex;
           //   flex-direction: row;
@@ -250,13 +244,13 @@ body{
 
               img {
                 rotate: 270deg;
-              } 
+              }
 
               .date-input-container {
                 display: flex;
                 align-items: center;
                 position: relative;
-                border: 1px solid #3C3C4399;
+                border: 1px solid #3c3c4399;
                 border-radius: 8px;
                 width: 145px;
                 height: 54px;
@@ -277,7 +271,7 @@ body{
                   p {
                     font-size: 16px;
                     font-family: FiraGo400;
-                    color: #3C3C4399;
+                    color: #3c3c4399;
                   }
 
                   input[type="date"] {
@@ -322,17 +316,17 @@ body{
       column-gap: 24px;
       row-gap: 30px;
 
-    //   @media (max-width: 1760px) {
-    //     grid-template-columns: repeat(3, 1fr);
-    //   }
+      //   @media (max-width: 1760px) {
+      //     grid-template-columns: repeat(3, 1fr);
+      //   }
 
-    //   @media (max-width: 1440px) {
-    //     grid-template-columns: repeat(2, 1fr);
-    //   }
+      //   @media (max-width: 1440px) {
+      //     grid-template-columns: repeat(2, 1fr);
+      //   }
 
-    //   @media (max-width: 1110px) {
-    //     grid-template-columns: repeat(1, 1fr);
-    //   }
+      //   @media (max-width: 1110px) {
+      //     grid-template-columns: repeat(1, 1fr);
+      //   }
 
       .card {
         position: relative;
@@ -340,13 +334,13 @@ body{
         border: 1px solid #33333360;
         border-radius: 10px;
         overflow: hidden;
-          
+
         .book-cover {
           width: 260px;
           height: 367px;
         }
 
-        .book-info{
+        .book-info {
           position: absolute;
           top: 0;
           display: flex;
@@ -355,100 +349,100 @@ body{
           height: 100%;
           width: 100%;
 
-
-          .book-views{
+          .book-views {
             display: flex;
             align-items: center;
             justify-content: flex-end;
             gap: 4px;
             padding: 15px 12px 0 0;
 
-            p{
+            p {
               color: #ffffff;
               font-family: FiraGo700;
               font-size: 1rem;
             }
           }
-  
-          .title-share{ 
+
+          .title-share {
             background-color: white;
             padding: 12px 12px 16px;
 
-            .title-share-default{
+            .title-share-default {
               display: flex;
               justify-content: space-between;
 
-              h2{
+              h2 {
                 font-family: FiraGo600;
                 color: $card-title;
                 font-size: 1rem;
               }
             }
 
-            .title-share-hover{
+            .title-share-hover {
               padding-top: 4px;
-              display: none;
+              height: 0;
 
-              p{
-                color: #3C3C4399;
+              overflow: hidden;
+              transition: height 0.4s;
+
+              p {
+                color: #3c3c4399;
                 font-family: FiraGo400;
                 font-size: 0.75rem;
                 padding: 4px 0 12px;
               }
 
-              span{
-                color: #3C3C4399;
+              span {
+                color: #3c3c4399;
                 font-family: FiraGo400;
                 font-size: 0.75rem;
               }
             }
           }
         }
-        
-        
 
-    //     .book-info {
-    //       width: 100%;
-    //       max-width: 275px;
-    //       padding: 16px;
-    //       margin-top: -3px;
-    //       border: 1px solid #c2c2c2;
-    //       border-bottom-left-radius: 10px;
-    //       border-bottom-right-radius: 10px;
-    //       color: #000000;
+        //     .book-info {
+        //       width: 100%;
+        //       max-width: 275px;
+        //       padding: 16px;
+        //       margin-top: -3px;
+        //       border: 1px solid #c2c2c2;
+        //       border-bottom-left-radius: 10px;
+        //       border-bottom-right-radius: 10px;
+        //       color: #000000;
 
-    //       h2 {
-    //         font-size: 20px;
-    //         font-weight: 500;
-    //         line-height: 24px;
-    //         margin-bottom: 20px;
-    //       }
+        //       h2 {
+        //         font-size: 20px;
+        //         font-weight: 500;
+        //         line-height: 24px;
+        //         margin-bottom: 20px;
+        //       }
 
-    //       p {
-    //         font-size: 16px;
-    //         line-height: 19.2px;
-    //         font-weight: 400;
-    //       }
+        //       p {
+        //         font-size: 16px;
+        //         line-height: 19.2px;
+        //         font-weight: 400;
+        //       }
 
-    //       .book-additional-info {
-    //         margin-top: 23px;
-    //         display: flex;
-    //         flex-direction: row;
-    //         justify-content: space-between;
-    //         align-items: center;
+        //       .book-additional-info {
+        //         margin-top: 23px;
+        //         display: flex;
+        //         flex-direction: row;
+        //         justify-content: space-between;
+        //         align-items: center;
 
-    //         .book-views {
-    //           display: flex;
-    //           flex-direction: row;
+        //         .book-views {
+        //           display: flex;
+        //           flex-direction: row;
 
-    //           p {
-    //             color: #13297f;
-    //             font-weight: 700;
-    //             margin-left: 4px;
-    //           }
-    //         }
-    //       }
-    //     }
+        //           p {
+        //             color: #13297f;
+        //             font-weight: 700;
+        //             margin-left: 4px;
+        //           }
+        //         }
+        //       }
+        //     }
       }
     }
   }
