--- a/styles/css/global.css
+++ b/styles/css/global.css
@@ -710,6 +710,7 @@ header .header_wrapper .burger_menu .line {
   background-color: #f5f5f5;
 }
 .book-main .book-container {
+  max-width: 1140px;
   padding: 76px 6.2% 63px;
   display: flex;
   flex-direction: row;
@@ -799,6 +800,7 @@ header .header_wrapper .burger_menu .line {
   font-weight: 500;
   border: none;
   cursor: pointer;
+  background-color: transparent;
 }
 .book-main .book-container .info-wrapper .button-wrapper button:active {
   color: #112f91;
@@ -849,6 +851,7 @@ header .header_wrapper .burger_menu .line {
   border-bottom: 0;
 }
 .book-main .book-container .info-wrapper .searching-section {
+  max-width: 1140px;
   margin-top: 40px;
 }
 .book-main .book-container .info-wrapper .searching-section .each_content_line {
