--- a/view/about-project.html
+++ b/view/about-project.html
@@ -14,7 +14,7 @@
     />
     <meta name="author" content="უნილაბის გუნდი" />
 
-    <link rel="stylesheet" href="../styles/global.css" />
+    <link rel="stylesheet" href="../styles/css/global.css" />
 
     <title>Library</title>
   </head>
@@ -24,7 +24,7 @@
         <div class="header_components">
           <!-- Logo -->
           <div class="logo">
-            <a href="index.html"
+            <a href="../index.html"
               ><img src="../assets/index.html/logo.svg" alt="logo"
             /></a>
           </div>
