--- a/styles/components/_components.scss
+++ b/styles/components/_components.scss
@@ -1,5 +1,6 @@
 body {
   background-color: $body-background-color;
+  font-family: "FiraGO400", Helvetica, sans-serif !important;
 }
 
 .container {
