--- a/styles/css/global.css
+++ b/styles/css/global.css
@@ -148,16 +148,80 @@ button {
   cursor: pointer;
 }
 
+@font-face {
+  font-family: "FiraGO100";
+  font-style: normal;
+  font-display: swap;
+  font-weight: 100;
+  src: url(https://cdn.jsdelivr.net/fontsource/fonts/firago@latest/latin-100-normal.woff2) format("woff2"), url(https://cdn.jsdelivr.net/fontsource/fonts/firago@latest/latin-100-normal.woff) format("woff");
+}
+/* firago-latin-200-normal */
+@font-face {
+  font-family: "FiraGO200";
+  font-style: normal;
+  font-display: swap;
+  font-weight: 200;
+  src: url(https://cdn.jsdelivr.net/fontsource/fonts/firago@latest/latin-200-normal.woff2) format("woff2"), url(https://cdn.jsdelivr.net/fontsource/fonts/firago@latest/latin-200-normal.woff) format("woff");
+}
+/* firago-latin-300-normal */
+@font-face {
+  font-family: "FiraGO300";
+  font-style: normal;
+  font-display: swap;
+  font-weight: 300;
+  src: url(https://cdn.jsdelivr.net/fontsource/fonts/firago@latest/latin-300-normal.woff2) format("woff2"), url(https://cdn.jsdelivr.net/fontsource/fonts/firago@latest/latin-300-normal.woff) format("woff");
+}
 /* firago-latin-400-normal */
 @font-face {
   font-family: "FiraGO400";
   font-style: normal;
   font-display: swap;
   font-weight: 400;
-  src: url(https://cdn.jsdelivr.net/fontsource/fonts/firago@latest/latin-400-normal.woff2);
+  src: url(https://cdn.jsdelivr.net/fontsource/fonts/firago@latest/latin-400-normal.woff2) format("woff2"), url(https://cdn.jsdelivr.net/fontsource/fonts/firago@latest/latin-400-normal.woff) format("woff");
+}
+/* firago-latin-500-normal */
+@font-face {
+  font-family: "FiraGO500";
+  font-style: normal;
+  font-display: swap;
+  font-weight: 500;
+  src: url(https://cdn.jsdelivr.net/fontsource/fonts/firago@latest/latin-500-normal.woff2) format("woff2"), url(https://cdn.jsdelivr.net/fontsource/fonts/firago@latest/latin-500-normal.woff) format("woff");
+}
+/* firago-latin-600-normal */
+@font-face {
+  font-family: "FiraGO600";
+  font-style: normal;
+  font-display: swap;
+  font-weight: 600;
+  src: url(https://cdn.jsdelivr.net/fontsource/fonts/firago@latest/latin-600-normal.woff2) format("woff2"), url(https://cdn.jsdelivr.net/fontsource/fonts/firago@latest/latin-600-normal.woff) format("woff");
+}
+/* firago-latin-700-normal */
+@font-face {
+  font-family: "FiraGO700";
+  font-style: normal;
+  font-display: swap;
+  font-weight: 700;
+  src: url(https://cdn.jsdelivr.net/fontsource/fonts/firago@latest/latin-700-normal.woff2) format("woff2"), url(https://cdn.jsdelivr.net/fontsource/fonts/firago@latest/latin-700-normal.woff) format("woff");
+}
+/* firago-latin-800-normal */
+@font-face {
+  font-family: "FiraGO800";
+  font-style: normal;
+  font-display: swap;
+  font-weight: 800;
+  src: url(https://cdn.jsdelivr.net/fontsource/fonts/firago@latest/latin-800-normal.woff2) format("woff2"), url(https://cdn.jsdelivr.net/fontsource/fonts/firago@latest/latin-800-normal.woff) format("woff");
+}
+/* firago-latin-900-normal */
+@font-face {
+  font-family: "FiraGO900";
+  font-style: normal;
+  font-display: swap;
+  font-weight: 900;
+  src: url(https://cdn.jsdelivr.net/fontsource/fonts/firago@latest/latin-900-normal.woff2) format("woff2"), url(https://cdn.jsdelivr.net/fontsource/fonts/firago@latest/latin-900-normal.woff) format("woff");
 }
 body {
   background-color: #f5f5f5;
+  font-family: "FiraGO400", Helvetica, sans-serif !important;
 }
 
 .container {
