--- a/styles/components/_footer.scss
+++ b/styles/components/_footer.scss
@@ -39,6 +39,12 @@
             text-decoration: underline;
           }
         }
+        @include responsive(l-tablet) {
+          display: flex;
+          flex-wrap: wrap;
+          flex-direction: row;
+          justify-content: space-around;
+        }
       }
     }
 
@@ -53,6 +59,20 @@
         &:not(:last-child) {
           margin-bottom: 22px;
         }
+
+        @include responsive(l-tablet) {
+          text-align: center;
+          display: block;
+          height: 100%;
+        }
+      }
+
+      @include responsive(l-tablet) {
+        flex-direction: row;
+        justify-content: center;
+        row-gap: 10px;
+        column-gap: 35px;
+        flex-wrap: wrap;
       }
     }
 
@@ -65,7 +85,6 @@
         width: 100%;
         display: flex;
         flex-direction: row;
-        // align-items: center;
         justify-content: space-between;
       }
 
@@ -74,6 +93,11 @@
         font-size: 14px;
         line-height: 16.8px;
       }
+    }
+
+    @include responsive(l-tablet) {
+      flex-direction: column;
+      gap: 40px;
     }
   }
 }
