--- a/styles/css/global.css
+++ b/styles/css/global.css
@@ -298,7 +298,7 @@ body {
   width: 100%;
   height: 61px;
   background-color: #0468dc;
-  color: #FFFFFF;
+  color: #ffffff;
   font-family: "FiraGo400";
   font-size: 1.5rem;
   border: none;
@@ -349,7 +349,7 @@ body {
   background-color: hsl(208, 86%, 92%);
 }
 .main-content-wrapper .filter-books-wrapper .filter-section .dropdown-options.displayed {
-  height: 156px;
+  height: auto;
   width: 100%;
   outline: 2px solid hsla(240, 6%, 25%, 0.6);
   border-radius: 15px;
@@ -369,7 +369,7 @@ body {
 .main-content-wrapper .filter-books-wrapper .dropdownUnderline {
   width: 100%;
   height: 2px;
-  background-color: #D8EBFC;
+  background-color: #d8ebfc;
   border-radius: 2px;
 }
 .main-content-wrapper .filter-books-wrapper .clean-filters {
@@ -387,7 +387,7 @@ body {
 .main-content-wrapper .filter-books-wrapper .dropdownUnderline {
   width: 100%;
   height: 2px;
-  background-color: #D8EBFC;
+  background-color: #d8ebfc;
   border-radius: 2px;
 }
 .main-content-wrapper .filter-books-wrapper .media-type-section {
@@ -533,7 +533,7 @@ body {
     grid-template-columns: repeat(2, 1fr);
   }
 }
-@media only screen and (max-width: 770px) {
+@media only screen and (max-width: 820px) {
   .main-content-wrapper .books-section {
     grid-template-columns: repeat(1, 1fr);
   }
@@ -636,15 +636,22 @@ body {
 
 .landing-photo-wrapper {
   width: 100%;
-  height: 294px;
+  max-height: 294px;
+  aspect-ratio: 8/3;
   overflow: hidden;
   position: relative;
 }
 .landing-photo-wrapper .landing-photo {
   width: 100%;
-  height: 294px;
+  height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
+}
+@media only screen and (max-width: 820px) {
+  .landing-photo-wrapper .landing-photo {
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
 }
 .landing-photo-wrapper::before {
   content: "";
@@ -694,7 +701,12 @@ header .header_wrapper .header_components .logo {
 }
 @media (max-width: 768px) {
   header .header_wrapper .header_components .logo {
-    width: 14.48%;
+    width: 17.48%;
+  }
+}
+@media (max-width: 360px) {
+  header .header_wrapper .header_components .logo {
+    width: 23%;
   }
 }
 header .header_wrapper .header_components .logo a img {
@@ -805,6 +817,14 @@ header .header_wrapper .burger_menu .line {
   cursor: pointer;
   text-decoration: underline;
 }
+@media only screen and (max-width: 820px) {
+  .footer-main-info .container .contacts-container .contacts-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-around;
+  }
+}
 .footer-main-info .container .usage-container {
   display: flex;
   flex-direction: column;
@@ -815,6 +835,23 @@ header .header_wrapper .burger_menu .line {
 }
 .footer-main-info .container .usage-container a:not(:last-child) {
   margin-bottom: 22px;
+}
+@media only screen and (max-width: 820px) {
+  .footer-main-info .container .usage-container a {
+    text-align: center;
+    display: block;
+    height: 100%;
+  }
+}
+@media only screen and (max-width: 820px) {
+  .footer-main-info .container .usage-container {
+    flex-direction: row;
+    justify-content: center;
+    row-gap: 10px;
+    -moz-column-gap: 35px;
+         column-gap: 35px;
+    flex-wrap: wrap;
+  }
 }
 .footer-main-info .container .unilab-team-container {
   display: flex;
@@ -831,6 +868,12 @@ header .header_wrapper .burger_menu .line {
   margin-top: 24px;
   font-size: 14px;
   line-height: 16.8px;
+}
+@media only screen and (max-width: 820px) {
+  .footer-main-info .container {
+    flex-direction: column;
+    gap: 40px;
+  }
 }
 
 .footer-additional-info {
