--- a/styles/utils/_mixins.scss
+++ b/styles/utils/_mixins.scss
@@ -2,7 +2,7 @@
 
 $l-pc: 1650px; // large PC screen size
 $pc: 1335px; // PC screen size.
-$l-tablet: 770px; // tablet screen size
+$l-tablet: 820px; // tablet screen size
 $tablet: 720px; // Tablet screen size.
 $phone: 375px; // Phone screen size.
 $s-phone: 360px; // Small Screen size.
@@ -64,7 +64,7 @@ $pc-max: $pc - 1;
   $border-radius: 20px,
   $border: none,
   $font-size: 24px,
-  $font-weight: 500, 
+  $font-weight: 500,
   // $hover-bg-color: black,
   // $active-bg-color:
 ) {
@@ -86,16 +86,15 @@ $pc-max: $pc - 1;
   // }
 }
 
-
 @mixin chooseButton(
   $bg-color: transparent,
   $color: #000,
   $padding: 0 0 7px,
   $border-radius: 0,
   $border: none,
-  $font: 'FiraGO',
+  $font: "FiraGO",
   $font-size: 20px,
-  $font-weight: 500, 
+  $font-weight: 500,
   // $hover-bg-color: black,
   $active-color: #112f91
 ) {
@@ -128,11 +127,11 @@ $pc-max: $pc - 1;
 
 @mixin searchReadButton(
   $bg-color: $main-blue-color,
-  $color: #FFFFFF,
+  $color: #ffffff,
   $border-radius: 12px,
   $border: none,
-  $font: 'FiraGo400',
-  $font-size: 1.5rem,
+  $font: "FiraGo400",
+  $font-size: 1.5rem
 ) {
   width: 100%;
   height: 61px;
@@ -144,14 +143,14 @@ $pc-max: $pc - 1;
   border-radius: $border-radius;
 }
 
-@mixin dropdownUnderline{
+@mixin dropdownUnderline {
   width: 100%;
   height: 2px;
-  background-color: #D8EBFC;
+  background-color: #d8ebfc;
   border-radius: 2px;
 }
 
-@mixin dropdownTitles{
+@mixin dropdownTitles {
   color: #333333;
   font-size: 24px;
   font-family: FiraGo700;
