--- a/styles/css/global.css
+++ b/styles/css/global.css
@@ -1273,11 +1273,19 @@ body {
           text-decoration-skip-ink: none;
 }
 
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 100vh;
+  font-family: FiraGo;
+}
+
 .flip-page-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 23px 120px;
+  padding: 23px 161px 23px 120px;
   background-color: #0077FF;
   color: white;
 }
@@ -1289,8 +1297,31 @@ body {
   cursor: pointer;
 }
 .flip-page-header .flip-navbar-right p {
-  font-family: FiraGo600;
+  font-family: FiraGo400;
+  font-size: 24px;
+}
+.flip-page-header .menu-ul {
+  background-color: white;
+  color: black;
+  position: absolute;
+  top: 96px;
+  border-radius: 10px;
+  border: 1px solid grey;
+  overflow: hidden;
+  z-index: 100;
+}
+.flip-page-header .menu-li {
   font-size: 20px;
+  width: 223px;
+  height: 46px;
+  padding-left: 16px;
+  border-bottom: 1px solid black;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+.flip-page-header .menu-li:last-child {
+  border-bottom: none;
 }
 
 #main-content {
@@ -1301,13 +1332,14 @@ body {
   align-items: center;
   padding: 120px;
   position: relative;
-  height: calc(100vh - 200px);
+  max-height: calc(100vh - 200px);
   overflow: hidden;
 }
 #main-content #loader {
   position: absolute;
   top: 50%;
   left: 50%;
+  width: 60px;
   transform: translate(-50%, -50%);
   z-index: 1000;
   visibility: visible;
@@ -1321,16 +1353,23 @@ body {
   border-radius: 4px;
 }
 
-#footer {
+#flip-page-footer {
   width: 100%;
-  height: 73px;
-  background-color: #0468DC;
+  height: 96px;
+  background-color: #0077FF;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#flip-page-footer .page {
   display: flex;
   align-items: center;
-  padding-left: 120px;
-}
-#footer div p {
   color: white;
-  font-size: 12;
-  font-family: FiraGo600;
+  font-size: 26px;
+  gap: 22px;
+}
+#flip-page-footer .page .current-page {
+  padding: 4px 8px;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  border-radius: 6px;
 }/*# sourceMappingURL=global.css.map */
