--- a/styles/page/_flip-page.scss
+++ b/styles/page/_flip-page.scss
@@ -1,9 +1,16 @@
+body{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 100vh;
+    font-family: FiraGo;
+}
 
 .flip-page-header{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 23px 120px;
+    padding: 23px 161px 23px 120px;
     background-color: #0077FF;
     color: white;
 
@@ -15,9 +22,33 @@
         cursor: pointer;
 
         p{
-         font-family: FiraGo600;
-         font-size: 20px;   
+         font-family: FiraGo400;
+         font-size: 24px;   
         }
+    }
+
+    .menu-ul{
+        background-color: white;
+        color: black;
+        position: absolute;
+        top: 96px;
+        border-radius: 10px;
+        border: 1px solid grey;
+        overflow: hidden;
+        z-index: 100;
+    }
+    .menu-li{
+        font-size: 20px;
+        width: 223px;
+        height: 46px;
+        padding-left: 16px;
+        border-bottom: 1px solid black;
+        display: flex;
+        align-items: center;
+        cursor: pointer;
+    }
+    .menu-li:last-child {
+        border-bottom: none;
     }
 }
 
@@ -29,12 +60,13 @@
     align-items: center;
     padding: 120px;
     position: relative;
-    height: calc(100vh - 200px);
+    max-height: calc(100vh - 200px);
     overflow: hidden;
     #loader {
         position: absolute;
         top: 50%;
         left: 50%;
+        width: 60px;
         transform: translate(-50%, -50%);
         z-index: 1000;
         visibility: visible;
@@ -51,19 +83,25 @@
     }
 }
 
-#footer{
+#flip-page-footer{
     width: 100%;
-    height: 73px;
-    background-color: #0468DC;
+    height: 96px;
+    background-color: #0077FF;
     display: flex;
+    justify-content: center;
     align-items: center;
-    padding-left: 120px;
 
-    div{
-        p{
-            color: white;
-            font-size: 12;
-            font-family: FiraGo600;
+    .page{
+        display: flex;
+        align-items: center;
+        color: white;
+        font-size: 26px;
+        gap: 22px;
+
+        .current-page{
+            padding: 4px 8px;
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            border-radius: 6px;
         }
     }
 }
