--- a/styles/page/_flip-page.scss
+++ b/styles/page/_flip-page.scss
@@ -45,10 +45,21 @@ body{
         border-bottom: 1px solid black;
         display: flex;
         align-items: center;
+        transition: background-color 0.3s, color 0.3s;  
         cursor: pointer;
     }
     .menu-li:last-child {
         border-bottom: none;
+    }
+    .menu-li:hover{
+        background-color: #022859;
+        color: #fff;
+        font-size: 24px;
+    }
+    .menu-li.hover{
+        background-color: #022859;
+        color: #fff;
+        font-size: 24px;
     }
 }
 
@@ -103,5 +114,31 @@ body{
             border: 1px solid rgba(255, 255, 255, 0.2);
             border-radius: 6px;
         }
+    }
+}
+
+#loader{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 32px;
+    flex: 1;
+
+    img{
+        width: 123px;
+        height: 124px;
+    }
+    h1{
+        font-size: 48px;
+        color: #022859;
+        font-family: FiraGo700;
+    }
+    a{
+        color: #0468DC;
+        font-size: 24px;
+        font-family: Firago500;
+        text-decoration: underline;
     }
 }
